# Pick-Place-moveIt

./: README.md
ur10_camera_gripper_moveit_config/: CMakeLists.txt  package.xml
ur10_camera_gripper_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  ur.srdf  ur.urdf.xacro
ur10_camera_gripper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_yt_sim/: CMakeLists.txt  README.md  package.xml
ur_yt_sim/launch/: spawn_ur10_camera.launch.py  spawn_ur10_camera_gripper.launch.py  spawn_ur10_camera_gripper_moveit.launch.py  spawn_ur10_camera_moveit.launch.py  view_ur10_camera.launch.py  view_ur10_camera_gripper.launch.py
ur_yt_sim/meshes/sensors/camera/: kinetic.dae
ur_yt_sim/rviz/: view_ur10_camera.rviz
ur_yt_sim/urdf/: camera.xacro  robotiq_gripper_macro.xacro  ur10_camera.urdf.xacro  ur10_camera_gripper.urdf.xacro  ur10_macro.xacro
