<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_yt_sim</name>
  <version>0.0.0</version>
  <description>Simulation of UR10 robot with camera in Gazebo for ROS 2</description>
  <maintainer email="hrishiintern24@gmail.com">hrishii</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="/home/ros2_ws/install/ur_yt_sim/share/"/>
    <gazebo_ros gazebo_model_path="/home/ros2_ws/install/robotiq_description/share/"/>
    
  </export>
</package>
